--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-EXPO_PUBLIC_APPWRITE_PROJECT_ID=691f323f000060c9c923
-EXPO_PUBLIC_APPWRITE_PROJECT_NAME=habit-tracker-app
-EXPO_PUBLIC_APPWRITE_ENDPOINT=https://fra.cloud.appwrite.io/v1
+EXPO_PUBLIC_APPWRITE_PROJECT_ID="691f323f000060c9c923"
+EXPO_PUBLIC_APPWRITE_PROJECT_NAME="habit-tracker-app"
+EXPO_PUBLIC_APPWRITE_ENDPOINT="https://fra.cloud.appwrite.io/v1"
 
-EXPO_PUBLIC_APPWRITE_DB=69286c3b00173a76b0c9
-EXPO_PUBLIC_APPWRITE_HABIT_TABLE=habits
-EXPO_PUBLIC_APPWRITE_COMPLETION_TABLE=habit_completion
-EXPO_PUBLIC_APPWRITE_BUCKET_ID=69397ca8001e86c13862
+EXPO_PUBLIC_APPWRITE_DB="69286c3b00173a76b0c9"
+EXPO_PUBLIC_APPWRITE_HABIT_TABLE="habits"
+EXPO_PUBLIC_APPWRITE_COMPLETION_TABLE="habit_completetion"
+EXPO_PUBLIC_APPWRITE_BUCKET_ID="69397ca8001e86c13862"
